K8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: flashflow-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxUnavailable: 0, maxSurge: 1 }
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      terminationGracePeriodSeconds: 15
      securityContext:
        runAsNonRoot: true
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: order-service
          image: gaurav598/order-service:v1
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          readinessProbe:
            httpGet: { path: /health/ready, port: 3003 }
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health/live, port: 3003 }
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: flashflow-ns
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
