K8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: flashflow-ns
spec:
  podSelector: {}
  policyTypes: [Ingress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-ingress
  namespace: flashflow-ns
spec:
  podSelector: { matchLabels: { app: api-gateway } }
  policyTypes: [Ingress]
  ingress:
    - ports: [{ protocol: TCP, port: 3000 }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-services
  namespace: flashflow-ns
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [auth-service, order-service]
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: api-gateway } }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stock-service
  namespace: flashflow-ns
spec:
  podSelector: { matchLabels: { app: stock-service } }
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: api-gateway } }
        - podSelector: { matchLabels: { app: order-service } }
      ports: [{ protocol: TCP, port: 3002 }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb
  namespace: flashflow-ns
spec:
  podSelector: { matchLabels: { app: mongodb } }
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: [auth-service, order-service]
      ports: [{ protocol: TCP, port: 27017 }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: flashflow-ns
spec:
  podSelector: { matchLabels: { app: redis } }
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: stock-service } }
      ports: [{ protocol: TCP, port: 6379 }]
